# printify

./: pyproject.toml
printify/: __init__.py  printify.py
printify/constants/: __init__.py  theme.py
printify/debug/: debug.py
printify/info/: print.py
printify/logging/: print.py
sample/: sample.py
